# myDictionary

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  allvocabcollected.txt  checkin.cpp  definitions.txt  dependencies.txt  main.py  package-lock.json  package.json  simpledefinitions.txt
app/: package-lock.json  package.json
app/src/: app.js  server.js  styles.css
front/: index.html
notes/: plan.txt
other/ezimportQuizlet/: vocab.txt
other/notes/: compartmentalizinglemma.txt  plan.txt  pythoninfostorage.txt
other/test/: app.py  compartmentalizer.py  main2.py
resources/: elCategorizer.py  sort.py  vocab.txt  vocab2.txt
resources/input/: vocab.txt  vocab2.txt
sql/: data.sqlite  test.py
src/: Main.cpp  checkin.cpp  testin.txt
test/: VocabClasses.py  app.py  bones.html  compartmentalizer.py  main2.py  script.js  styles.css
